# query-context-aware-learning-to-rank

./: .gitignore  README.md  model.py  model_runner.sh  pyproject.toml  requirements.txt  train_model.py
datasets/: retailrocket.ipynb  taobao.ipynb
